# guile-allegro5

./: LICENSE  Makefile.am  README.md  TODO.org  configure.ac  generate.scm
allegro/: display.scm  events.scm  graphics.scm  keyboard.scm  mouse.scm  system.scm  time.scm  timer.scm  transform.scm  utils.scm
allegro/addons/: font.scm  image.scm  ttf.scm
seed/refman/: acodec.html  audio.html  color.html  config.html  direct3d.html  display.html  events.html  file.html  fixed.html  font.html  fshook.html  getting_started.html  graphics.html  image.html  index.html  index_all.html  joystick.html  keyboard.html  main.html  memfile.html  memory.html  misc.html  mouse.html  native_dialog.html  opengl.html  path.html  physfs.html  platform.html  primitives.html  search_index.js  state.html  system.html  threads.html  time.html  timer.html  transformations.html  utf8.html
