include guile.am

moddir=$(prefix)/share/guile/site/2.0
godir=$(libdir)/guile/2.0/ccache

SOURCES = allegro/display.scm \
	allegro/events.scm \
	allegro/graphics.scm \
	allegro/keyboard.scm \
	allegro/mouse.scm \
	allegro/system.scm \
	allegro/timer.scm \
	allegro/time.scm \
	allegro/transform.scm \
	allegro/utils.scm \
	allegro/addons/font.scm \
	allegro/addons/image.scm \
	allegro/addons/ttf.scm

EXTRA_DIST += env.in
